# gtable-parser

./: .gitignore  CMakeLists.txt  README.md  config.h.in  ddl.l  ddl.y  gql.l  gql.y  pyparser.py  setup.py
.github/workflows/: pythonpackage.yml
demo/: parse.py
demo/schema/: Datatable.ddl  Datatable.ddl.xml  SeekIndex.gql  SeekIndex.gql.xml
gqlgenerator/: utils.py
gqlgenerator/schame/: config.py  utility.py
gqlparser/: CMakeLists.txt  README.md  __init__.py  ddl.y  gql.y  setup.py
gqlparser/include/: ddl2xml_python_main.h
gqlparser/src/: ddl2xml_main.cpp  ddl2xml_xml_generator.cpp  gql2xml.cpp
gtableparser/: __init__.py
include/: config.h  ddl2xml.h  ddl2xml_xml_generator.h  gql2xml.h  gql2xml_python_main.h  gql2xml_xml_generator.h  parser-common.h
src/: ddl2xml.cpp  ddl2xml_main.cpp  ddl2xml_python_main.cpp  ddl2xml_xml_generator.cpp  gql2xml.cpp  gql2xml_main.cpp  gql2xml_python_main.cpp  gql2xml_xml_generator.cpp  parser-common.cpp
